# Symmetry-KFBI

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  requirements.txt
.github/workflows/: build-and-smoke.yml
apps/: CMakeLists.txt  crossing_owner_restrict_3d.cpp  crossing_owner_restrict_3d.hpp  crossing_owner_restrict_3d_test.cpp  dirichlet_rigid_transform_study_3d.cpp  dirichlet_rigid_transform_study_3d.hpp  dirichlet_rigid_transform_study_3d_test.cpp  exterior_only_cubic_normal_restrict_3d.cpp  exterior_only_cubic_normal_restrict_3d.hpp  exterior_only_cubic_normal_restrict_3d_test.cpp  harmonic_polynomial_space_3d.cpp  harmonic_polynomial_space_3d.hpp  harmonic_polynomial_space_3d_test.cpp  native_nurbs_surface_3d.cpp  native_nurbs_surface_3d.hpp  native_nurbs_surface_3d_test.cpp  native_nurbs_surface_transform_3d.cpp  native_nurbs_surface_transform_3d.hpp  native_nurbs_surface_transform_3d_test.cpp  neumann_exterior_trace_circle_2d.cpp  neumann_exterior_trace_lshape_2d.cpp  neumann_exterior_zero_trace_3d.cpp  neumann_harmonic_jet_case_2d.cpp  neumann_harmonic_jet_python_compatible_2d.cpp  shape_opt_transmission_2d.cpp  transmission_center_perturb_2d.cpp  visualize_shape_opt_2d.py  visualize_transmission_center_perturb_2d.py
docs/superpowers/plans/: 2026-07-20-dirichlet-dual-formulation.md  2026-07-20-dirichlet-normal-jump-second-kind.md  2026-07-21-3d-cauchy-stencil-policy-comparison.md  2026-07-21-3d-cubic-cauchy-count-search.md  2026-07-21-3d-harmonic-jet-full-solve.md  2026-07-21-3d-nonconvex-domain-labeling.md  2026-07-21-3d-nurbs-native-domain-labeling.md  2026-07-21-native-nurbs-surface-dofs-3d.md  2026-07-21-normal-restrict-degree-comparison.md  2026-07-21-separate-crossing-cauchy-topology-3d.md  2026-07-21-shared-cauchy-nonpolynomial-lshape.md  2026-07-22-grid-scaled-nurbs-closest-point-intersection.md  2026-07-22-nurbs-bezier-module-split.md  2026-07-23-3d-g1-cauchy-default.md  2026-07-23-3d-gmres-run-guard.md  2026-07-23-3d-rigid-transform-stability.md  2026-07-23-nurbs-cartesian-classification-intersections.md  2026-07-23-nurbs-correction-safety-and-point-classification.md  2026-07-24-3d-crossing-owner-restrict.md  2026-07-24-3d-normal-restrict-causal-diagnosis.md
docs/superpowers/results/: 2026-07-21-3d-cauchy-stencil-policy-comparison.md  2026-07-21-3d-cubic-cauchy-count-search.md  2026-07-21-3d-harmonic-jet-results.md  2026-07-21-3d-nurbs-native-domain-labeling.md  2026-07-21-lshape-normal-restrict-degree-comparison.md  2026-07-21-lshape-shared-cauchy-nonpolynomial.md  2026-07-23-3d-neumann-g1-policy-comparison.md  2026-07-23-nurbs-cartesian-classification-intersections.md  2026-07-23-nurbs-correction-safety-and-point-classification.md
docs/superpowers/specs/: 2026-07-20-dirichlet-dual-formulation-design.md  2026-07-20-dirichlet-normal-jump-second-kind-design.md  2026-07-21-3d-cauchy-stencil-policy-comparison-design.md  2026-07-21-3d-cubic-cauchy-count-search-design.md  (+16 more)
include/kfbim/: geometry.hpp  grid.hpp  interface.hpp  kfbim.hpp  laplace.hpp  potentials.hpp
src/: CMakeLists.txt
src/bulk_solvers/: fft_engine.hpp  fftw3_engine.cpp  fftw3_engine.hpp  i_bulk_solver.hpp  iim_laplace_2d.hpp  laplace_fft_bulk_solver_2d.cpp  laplace_fft_bulk_solver_2d.hpp  laplace_zfft_bulk_solver_2d.cpp  laplace_zfft_bulk_solver_2d.hpp  laplace_zfft_bulk_solver_3d.cpp  laplace_zfft_bulk_solver_3d.hpp  zfft_bc_type.hpp  zfft_engine_2d.cpp  zfft_engine_2d.hpp
src/geometry/: corner_patch_2d.cpp  corner_patch_2d.hpp  curve_2d.hpp  curve_resampler_2d.cpp  curve_resampler_2d.hpp  edge_patch_3d.cpp  edge_patch_3d.hpp  grid_pair_2d.cpp  grid_pair_2d.hpp  grid_pair_3d.cpp  grid_pair_3d.hpp  nurbs_basis.hpp  nurbs_bezier_extraction_3d.cpp  nurbs_bezier_extraction_3d.hpp  nurbs_bezier_intersection_3d.cpp  nurbs_bezier_intersection_3d.hpp  nurbs_bezier_segment_closest_point_3d.cpp  nurbs_bezier_segment_closest_point_3d.hpp  nurbs_bezier_segment_stationary_points_3d.cpp  nurbs_bezier_segment_stationary_points_3d.hpp  nurbs_cartesian_domain_3d.cpp  nurbs_cartesian_domain_3d.hpp  nurbs_curve.hpp  nurbs_curve_2d.hpp  nurbs_curve_3d.hpp  nurbs_patch_triangulator_3d.cpp  nurbs_patch_triangulator_3d.hpp  nurbs_surface_3d.hpp  nurbs_surface_intersector_3d.cpp  nurbs_surface_intersector_3d.hpp  nurbs_surface_model_3d.cpp  nurbs_surface_model_3d.hpp  nurbs_utils.hpp  p2_curve_2d.hpp  p2_projection_2d.cpp  p2_projection_2d.hpp  p2_projection_3d.cpp  p2_projection_3d.hpp  p2_surface_3d.hpp  rational_bezier_element_3d.cpp  (+5 more)
src/gmres/: gmres.cpp  gmres.hpp  i_outer_solver.hpp
src/grid/: cartesian_grid_2d.cpp  cartesian_grid_2d.hpp  cartesian_grid_3d.cpp  cartesian_grid_3d.hpp  dof_layout.hpp  i_cartesian_grid.hpp  mac_grid_2d.cpp  mac_grid_2d.hpp  mac_grid_3d.cpp  mac_grid_3d.hpp  structured_grid_ops.hpp
src/interface/: interface_2d.cpp  interface_2d.hpp  interface_3d.cpp  interface_3d.hpp
src/local_cauchy/: edge_patch_laplacian_3d.cpp  edge_patch_laplacian_3d.hpp  edge_singular_bspline_fit_3d.cpp  edge_singular_bspline_fit_3d.hpp  edge_singular_fit_3d.cpp  edge_singular_fit_3d.hpp  i_local_cauchy_solver.hpp  jump_data.hpp  laplace_corner_patch_solver_2d.hpp  laplace_panel_solver_2d.hpp  laplace_patch_solver_3d.hpp  local_poly.hpp
src/operators/: i_kfbi_operator.hpp  laplace_bvp_2d.cpp  laplace_bvp_2d.hpp  laplace_bvp_3d.cpp  laplace_bvp_3d.hpp  laplace_neumann_exterior_trace_2d.cpp  laplace_neumann_exterior_trace_2d.hpp  laplace_transmission_2d.cpp  laplace_transmission_2d.hpp  laplace_transmission_3d.cpp  laplace_transmission_3d.hpp  stokes_kfbi_operator.hpp
src/operators/detail/: laplace_operator_utils.hpp
src/potentials/: laplace_potential.cpp  laplace_potential.hpp
src/transfer/: i_restrict.hpp  i_spread.hpp  laplace_correction_support.hpp  laplace_projection_correction_2d.hpp  laplace_projection_correction_3d.hpp  laplace_restrict_2d.cpp  laplace_restrict_2d.hpp  laplace_restrict_3d.cpp  laplace_restrict_3d.hpp  laplace_sd_corner_lifting_2d.hpp  laplace_spread_2d.cpp  laplace_spread_2d.hpp  laplace_spread_3d.cpp  laplace_spread_3d.hpp
